# ai-blending-control-demo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/remotecontrolprojector/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/inc/: common.h  native_jni.h
app/src/main/cpp/src/: native_jni.cpp
app/src/main/java/com/example/remotecontrolprojector/: RemoteControlActivity.kt  RemoteControlViewModel.kt  RemoteService.kt
app/src/main/java/com/example/remotecontrolprojector/dataOverSound/: DeviceDiscoveryManager.kt  Ggwave.kt
app/src/main/java/com/example/remotecontrolprojector/image/: ImageBlendingFragment.kt  ImageBlendingViewModel.kt
app/src/main/java/com/example/remotecontrolprojector/pairing/: PairingFragment.kt  PairingViewModel.kt  ScannedDeviceAdapter.kt
app/src/main/java/com/example/remotecontrolprojector/remote/: RemoteCommand.kt  RemoteControlClient.kt  RemoteMessage.kt
app/src/main/java/com/example/remotecontrolprojector/showcase/: ShowcaseSelectionFragment.kt  ShowcaseSelectionViewModel.kt
app/src/main/res/layout/: activity_main.xml  activity_remote_control.xml  fragment_image.xml  fragment_pairing.xml  fragment_showcase_selection.xml  fragment_video.xml  item_scan_result.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/remotecontrolprojector/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
